--- a/livraria-api-2020-1/src/main/resources/application.properties
+++ b/livraria-api-2020-1/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url= jdbc:mysql://localhost:3306/livraria_db?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.jpa.hibernate.ddl-auto=create
