--- a/livraria-api-2020-1/src/main/resources/application.properties
+++ b/livraria-api-2020-1/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url= jdbc:mysql://localhost:3306/livraria_db?useTimezone=true&
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.initialization-mode=always
