--- a/livraria-api-2020-1/src/main/resources/application.properties
+++ b/livraria-api-2020-1/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.initialization-mode=always
+
+spring.data.mongodb.uri = mongodb://localhost:27017/clientes
+
