--- a/livraria-api-2020-1/src/main/resources/application.properties
+++ b/livraria-api-2020-1/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.initialization-mode=always
 
 spring.data.mongodb.uri = mongodb://localhost:27017/clientes
 
+server.servlet.context-path=apilivros
+
