Atualização para construção do front-end Vue

--- a/livraria-api-2020-1/src/main/resources/application.properties
+++ b/livraria-api-2020-1/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.datasource.initialization-mode=always
 spring.data.mongodb.uri = mongodb://localhost:27017/clientes
 
 server.servlet.context-path=/apilivros
+server.port=8081
 
